# twitter_open_wheater_integration

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  app.py  pyproject.toml  server.py
src/adapters/: twitter_client.py  weathermap_client.py
src/config/: env.py  logger.py
src/database/: database.py
src/dtos/: dtos.py
src/entrypoints/controllers/v1/: twitter_controller.py
src/entrypoints/routers/: api_v1.py  router.py
src/exceptions/: client_exceptions.py  search_weather_service_exceptions.py
src/models/: city.py
src/services/: search_weather_service.py  social_media_service.py
src/tests/adapters/: twitter_client_test.py
src/tests/database/: database_test.py
src/tests/services/: search_weather_service_test.py  social_media_service_test.py
tests/adapters/: twitter_client_test.py  weathermap_client_test.py
tests/config/: env_test.py  logger_test.py
tests/entrypoint/: test_tweet_controller.py
tests/services/: search_weather_service_test.py
