[tool.poetry]
name = "twitter_open_wheater_integration"
version = "0.1.0"
description = ""
authors = ["Gustavo Honorato Nicolau <46831966+Gushono@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.97.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
