[tool.poetry]
name = "twitter_open_wheater_integration"
version = "0.1.0"
description = ""
authors = ["Gustavo Honorato Nicolau <46831966+Gushono@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"
httpx = "^0.24.1"
tortoise-orm = "^0.19.3"
tweepy = "^4.14.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
pytest-asyncio = "^0.21.0"
coverage = "^7.2.7"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
